fix: success icon spacing

--- a/packages/components/src/components/helper-text/helper-text.css
+++ b/packages/components/src/components/helper-text/helper-text.css
@@ -28,7 +28,7 @@
 
 scale-icon-alert-information,
 scale-icon-alert-error,
-scale-icon-alert-success {
+scale-icon-action-success {
   display: flex;
   justify-content: center;
   align-items: center;
